After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772162 - When deleting ALL images, the last one stays in preview
When deleting ALL images, the last one stays in preview
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: image viewer
git master
Other Linux
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-29 09:59 UTC by Gautier Pelloux-Prayer
Modified: 2016-10-04 17:43 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Gautier Pelloux-Prayer 2016-09-29 09:59:42 UTC
Here are steps to reproduce the issue:

1) Find a folder with *at least* 2 images /some/folder
2) Open eog in it: eog /some/folder
3) Use Shift+Delete to delete permanently the first image. **Tick** the "don't warn me again for this session" check-box
4) Do the same for the second image
5) Next and previous images are grayed (but NOT rotation buttons). Additionally the image stays here.

Please note that not ticking the checkbox and/or using simply Delete instead of Shift+Delete seem not to replicate the bug.
Comment 1 Felix Riemann 2016-10-04 17:27:36 UTC
Well, for me it eventually does clear if move the mouse over it or click on it.

It looks like the widget doesn't notice that it needs a redraw over the whole image area.
Comment 2 Felix Riemann 2016-10-04 17:41:12 UTC
Yes, eog didn't invalidate the image area the moment the image was unset. Apparently until now something else was causing enough "damage" then so that GTK+ quickly scheduled a redraw on its own.

commit 85043d5c75bdd606dc4a059761582d007fdd967e
Author: Felix Riemann <>
Date:   Tue Oct 4 19:33:49 2016 +0200

    EogScrollView: Ensure view is redrawn if image is unset
    
    Otherwise the image could stay visible until the user triggers
    a redraw, for example by mouse clicking.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=772162
---
This problem has been fixed in our software repository. The fix will go into the next software release. Once that release is available, you may want to check for a software upgrade provided by your Linux distribution.
Comment 3 Gautier Pelloux-Prayer 2016-10-04 17:43:49 UTC
Awesome, thanks Felix for the quick fix!