EogScrollView: Ensure view is redrawn if image is unset

Otherwise the image could stay visible until the user triggers
a redraw, for example by mouse clicking.

https://bugzilla.gnome.org/show_bug.cgi?id=772162